--- a/serenity.properties
+++ b/serenity.properties
@@ -1,1 +1,1 @@
-serenity.project.name=Serenity and Cucumber Quick Start Ferr - Branch
+serenity.project.name=Serenity and Cucumber Quick Start - Jenkins File Configuration
