--- a/src/test/resources/serenity.conf
+++ b/src/test/resources/serenity.conf
@@ -1,11 +1,17 @@
 webdriver {
   driver = chrome
+   timeouts {
+          implicitlywait = 30000 #30 segundos
+          fluentwait = 10000
+          explicit = 60000
+        }
   autodownload = true
 }
-headless.mode = true
+
+headless.mode = false
 
 serenity {
-    take.screenshots = FOR_FAILURES
+    take.screenshots = BEFORE_AND_AFTER_EACH_STEP
 }
 #
 # Chrome options can be defined using the chrome.switches property
